# fao-rag-llm

./: README.md  pyproject.toml  run.py
data/: Food_price_indices_data_mar24.csv
